--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlOmo9/Pk6VfVFoSAtbuHtWP9BdTh4JfysJwaOMpy08neZ" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+</body>
     </body>
 
 </html>
