--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +17,21 @@
         <ul id="address-list" class="list-group"> </ul>
     </div>
 
+    <hr class="my-4"> <div>
+        <h2>Plan Trip</h2>
+        <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
+        <ul id="trip-sequence-list" class="list-group mb-3">
+            <li class="list-group-item text-muted">Select addresses above to build your trip...</li>
+        </ul>
+        <button id="calculate-mileage-button" class="btn btn-success">Calculate Mileage</button>
+
+        <div id="mileage-results" class="mt-3" style="display: none;">
+            <h3>Mileage Results</h3>
+            <p id="total-distance">Total Distance: --</p>
+            <h4>Trip Legs:</h4>
+            <ul id="trip-legs-list" class="list-group">
+                </ul>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
