--- a/index.html
+++ b/index.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mileage Tracker</title>
-        <link rel="stylesheet" href="style.css"> 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mileage Tracker</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
 <body>
-    <div class="container mt-4"> <h1 class="mb-3">Mileage Tracker</h1> <div class="mb-3"> <h2>Add Client Address</h2>
-        <div class="input-group"> <input type="text" id="address-input" class="form-control" placeholder="Enter client address"> <button id="add-address-button" class="btn btn-primary">Add Address</button> </div>
-    </div>
+    <div class="container mt-4">
+        <h1 class="mb-3">Mileage Tracker</h1>
+        <div class="mb-3">
+            <h2>Add Client Address</h2>
+            <div class="input-group">
+                <input type="text" id="address-input" class="form-control" placeholder="Enter client address">
+                <button id="add-address-button" class="btn btn-primary">Add Address</button>
+            </div>
+        </div>
 
-    <div>
-        <h2>My Client Addresses</h2>
-        <ul id="address-list" class="list-group"> </ul>
-    </div>
-
-    <hr class="my-4"> <div>
-        <h2>Plan Trip</h2>
-        <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
-        <ul id="trip-sequence-list" class="list-group mb-3">
-            <li class="list-group-item text-muted">Select addresses above to build your trip...</li>
-        </ul>
-        <button id="calculate-mileage-button" class="btn btn-success">Calculate Mileage</button>
-
-        <div id="mileage-results" class="mt-3" style="display: none;">
-            <h3>Mileage Results</h3>
-            <p id="total-distance">Total Distance: --</p>
-            <h4>Trip Legs:</h4>
-            <ul id="trip-legs-list" class="list-group">
+        <div>
+            <h2>My Client Addresses</h2>
+            <ul id="address-list" class="list-group">
                 </ul>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+
+        <hr class="my-4"> <div> <h2>Plan Trip</h2>
+            <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
+            <ul id="trip-sequence-list" class="list-group mb-3">
+                <li class="list-group-item text-muted">Select addresses above to build your trip...</li>
+            </ul>
+            <button id="calculate-mileage-button" class="btn btn-success">Calculate Mileage</button>
+
+            <div id="mileage-results" class="mt-3" style="display: none;">
+                <h3>Mileage Results</h3>
+                <p id="total-distance">Total Distance: --</p>
+                <p id="potential-reimbursement">Potential Reimbursement: --</p>
+                <h4>Trip Legs:</h4>
+                <ul id="trip-legs-list" class="list-group">
+                    </ul>
+                </div>
+        </div> </div> <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
+</html>
 
 </html>
