--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
         <div>
             <h2>My Client Addresses</h2>
             <ul id="address-list" class="list-group">
-                </ul>
+            </ul>
         </div>
 
-        <hr class="my-4"> <div> <h2>Plan Trip</h2>
+        <hr class="my-4">
+        <div>
+            <h2>Plan Trip</h2>
             <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
             <ul id="trip-sequence-list" class="list-group mb-3">
                 <li class="list-group-item text-muted">Select addresses above to build your trip...</li>
@@ -39,12 +41,17 @@
                 <p id="potential-reimbursement">Potential Reimbursement: --</p>
                 <h4>Trip Legs:</h4>
                 <ul id="trip-legs-list" class="list-group">
-                    </ul>
-                </div>
-        </div> </div> <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+                </ul>
+                <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button>
+            </div>
+        </div>
+    </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
 
 </html>
