Provide complete index.html and script.js with save trip button logic

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container mt-4">
         <h1 class="mb-3">Mileage Tracker</h1>
+
         <div class="mb-3">
             <h2>Add Client Address</h2>
             <div class="input-group">
@@ -23,11 +24,10 @@
         <div>
             <h2>My Client Addresses</h2>
             <ul id="address-list" class="list-group">
-            </ul>
+                </ul>
         </div>
 
-        <hr class="my-4">
-        <div>
+        <hr class="my-4"> <div>
             <h2>Plan Trip</h2>
             <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
             <ul id="trip-sequence-list" class="list-group mb-3">
@@ -41,17 +41,13 @@
                 <p id="potential-reimbursement">Potential Reimbursement: --</p>
                 <h4>Trip Legs:</h4>
                 <ul id="trip-legs-list" class="list-group">
-                </ul>
-                <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button>
-            </div>
+                    </ul>
+                 <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button> </div>
         </div>
-    </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+
+    </div> <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
-
-</html>
 
 </html>
