--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 </ul>
         </div>
 
-        <hr class="my-4"> <div>
+        <hr class="my-4">
+        <div>
             <h2>Plan Trip</h2>
             <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
             <ul id="trip-sequence-list" class="list-group mb-3">
@@ -42,10 +43,21 @@
                 <h4>Trip Legs:</h4>
                 <ul id="trip-legs-list" class="list-group">
                     </ul>
-                 <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button> </div>
+                 <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button>
+            </div>
         </div>
 
-    </div> <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+        <hr class="my-4">
+
+        <div class="mb-3">
+            <h2>Trip History</h2>
+            <ul id="trip-history-list" class="list-group">
+                <li class="list-group-item text-muted">Loading trip history...</li>
+            </ul>
+        </div>
+        </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
