--- a/index.html
+++ b/index.html
@@ -57,6 +57,32 @@
         </div>
         </div>
 
+    <div class="modal fade" id="tripDetailsModal" tabindex="-1" aria-labelledby="tripDetailsModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg"> <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="tripDetailsModalLabel">Trip Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p><strong>Date:</strong> <span id="detail-trip-date"></span></p>
+                    <p><strong>Total Distance:</strong> <span id="detail-total-distance"></span></p>
+                    <p><strong>Reimbursement:</strong> <span id="detail-reimbursement"></span></p>
+
+                    <h6 class="mt-3">Trip Sequence:</h6>
+                    <ul id="detail-trip-sequence" class="list-group list-group-flush">
+                        </ul>
+
+                    <h6 class="mt-3">Trip Legs:</h6>
+                     <ul id="detail-trip-legs" class="list-group list-group-flush">
+                        </ul>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
