Add date/time inputs to UI and update backend to save/fetch trip_datetime

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
             <ul id="trip-sequence-list" class="list-group mb-3">
                 <li class="list-group-item text-muted">Select addresses above to build your trip...</li>
             </ul>
+
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <label for="trip-date-input" class="form-label">Trip Date</label>
+                    <input type="date" class="form-control" id="trip-date-input">
+                </div>
+                <div class="col-md-6">
+                     <label for="trip-time-input" class="form-label">Trip Time</label>
+                    <input type="time" class="form-control" id="trip-time-input">
+                </div>
+            </div>
             <button id="calculate-mileage-button" class="btn btn-success">Calculate Mileage</button>
 
             <div id="mileage-results" class="mt-3" style="display: none;">
