--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mileage Tracker</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,12 +20,14 @@
                 <input type="text" id="address-input" class="form-control" placeholder="Enter client address">
                 <button id="add-address-button" class="btn btn-primary">Add Address</button>
             </div>
+            <div id="add-address-error" class="text-danger mt-2" style="display: none;"></div>
         </div>
 
         <div>
             <h2>My Client Addresses</h2>
             <ul id="address-list" class="list-group">
                 </ul>
+             <div id="fetch-addresses-error" class="text-danger mt-2" style="display: none;"></div>
         </div>
 
         <hr class="my-4">
@@ -34,6 +37,8 @@
             <ul id="trip-sequence-list" class="list-group mb-3">
                 <li class="list-group-item text-muted">Select addresses above to build your trip...</li>
             </ul>
+
+            <button id="clear-trip-sequence-button" class="btn btn-secondary btn-sm mb-3" style="display: none;">Clear Trip Sequence</button>
 
             <div class="row mb-3">
                 <div class="col-md-6">
@@ -46,6 +51,8 @@
                 </div>
             </div>
             <button id="calculate-mileage-button" class="btn btn-success">Calculate Mileage</button>
+            <div id="calculate-mileage-error" class="text-danger mt-2" style="display: none;"></div>
+
 
             <div id="mileage-results" class="mt-3" style="display: none;">
                 <h3>Mileage Results</h3>
@@ -55,6 +62,7 @@
                 <ul id="trip-legs-list" class="list-group">
                     </ul>
                  <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button>
+                 <div id="save-trip-error" class="text-danger mt-2" style="display: none;"></div>
             </div>
         </div>
 
@@ -65,6 +73,7 @@
             <ul id="trip-history-list" class="list-group">
                 <li class="list-group-item text-muted">Loading trip history...</li>
             </ul>
+             <div id="fetch-history-error" class="text-danger mt-2" style="display: none;"></div>
         </div>
         </div>
 
