--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h3>Mileage Results</h3>
                 <p id="total-distance">Total Distance: --</p>
                 <p id="potential-reimbursement">Potential Reimbursement: --</p>
-                <h4>Trip Legs:</h4>
+                <h4>Mileage Between Stops:</h4>
                 <ul id="trip-legs-list" class="list-group">
                     </ul>
                  <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button>
@@ -92,7 +92,7 @@
                     <ul id="detail-trip-sequence" class="list-group list-group-flush">
                         </ul>
 
-                    <h6 class="mt-3">Trip Legs:</h6>
+                    <h6 class="mt-3">Mileage Between Stops:</h6>
                      <ul id="detail-trip-legs" class="list-group list-group-flush">
                         </ul>
 
@@ -103,6 +103,38 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="tripEditModal" tabindex="-1" aria-labelledby="tripEditModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="tripEditModalLabel">Edit Trip</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="hidden" id="edit-trip-id">
+
+                    <div class="mb-3">
+                        <label for="edit-trip-date-input" class="form-label">Trip Date</label>
+                        <input type="date" class="form-control" id="edit-trip-date-input">
+                    </div>
+                    <div class="mb-3">
+                         <label for="edit-trip-time-input" class="form-label">Trip Time</label>
+                        <input type="time" class="form-control" id="edit-trip-time-input">
+                    </div>
+
+                    <div id="edit-trip-error" class="text-danger mt-2" style="display: none;"></div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" id="save-edit-trip-button" class="btn btn-primary">Save Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
