--- a/index.html
+++ b/index.html
@@ -14,96 +14,149 @@
     <div class="container mt-4">
         <h1 class="mb-3">Mileage Tracker</h1>
 
-        <div class="mb-3">
-            <h2>Add Client Address</h2>
-            <div class="input-group">
-                <input type="text" id="address-input" class="form-control" placeholder="Enter client address">
-                <button id="add-address-button" class="btn btn-primary">Add Address</button>
-            </div>
-            <div id="add-address-error" class="text-danger mt-2" style="display: none;"></div>
-        </div>
-
-        <div>
-            <h2>My Client Addresses</h2>
-            <ul id="address-list" class="list-group">
-                </ul>
-             <div id="fetch-addresses-error" class="text-danger mt-2" style="display: none;"></div>
-        </div>
-
-        <hr class="my-4">
-        <div>
-            <h2>Plan Trip</h2>
-            <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
-            <ul id="trip-sequence-list" class="list-group mb-3">
-                <li class="list-group-item text-muted">Select addresses above to build your trip...</li>
-            </ul>
-
-            <button id="clear-trip-sequence-button" class="btn btn-secondary btn-sm mb-3" style="display: none;">Clear Trip Sequence</button>
-
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <label for="trip-date-input" class="form-label">Trip Date</label>
-                    <input type="date" class="form-control" id="trip-date-input">
-                </div>
-                <div class="col-md-6">
-                     <label for="trip-time-input" class="form-label">Trip Time</label>
-                    <input type="time" class="form-control" id="trip-time-input">
-                </div>
-            </div>
-            <button id="calculate-mileage-button" class="btn btn-success">Calculate Mileage</button>
-            <div id="calculate-mileage-error" class="text-danger mt-2" style="display: none;"></div>
-
-
-            <div id="mileage-results" class="mt-3" style="display: none;">
-                <h3>Mileage Results</h3>
-                <p id="total-distance">Total Distance: --</p>
-                <p id="potential-reimbursement">Potential Reimbursement: --</p>
-                <h4>Mileage Between Stops:</h4>
-                <ul id="trip-legs-list" class="list-group">
-                    </ul>
-                 <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button>
-                 <div id="save-trip-error" class="text-danger mt-2" style="display: none;"></div>
-            </div>
-        </div>
-
-        <hr class="my-4">
-
-        <div class="mb-3">
-            <h2>Trip History</h2>
-
-            <div class="row mb-3">
-                 <div class="col-md-6">
-                     <label for="filter-start-date" class="form-label">From Date</label>
-                     <input type="date" class="form-control" id="filter-start-date">
+         <div id="auth-section" class="mb-4 card p-3">
+             <div id="logged-out-view">
+                 <h3>Sign Up or Log In</h3>
+                 <ul class="nav nav-tabs mb-3" id="authTabs" role="tablist">
+                     <li class="nav-item" role="presentation">
+                         <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="login" aria-selected="true">Log In</button>
+                     </li>
+                     <li class="nav-item" role="presentation">
+                         <button class="nav-link" id="signup-tab" data-bs-toggle="tab" data-bs-target="#signup" type="button" role="tab" aria-controls="signup" aria-selected="false">Sign Up</button>
+                     </li>
+                 </ul>
+                 <div class="tab-content" id="authTabsContent">
+                     <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+                         <form id="login-form">
+                             <div class="mb-3">
+                                 <label for="login-email" class="form-label">Email address</label>
+                                 <input type="email" class="form-control" id="login-email" required>
+                             </div>
+                             <div class="mb-3">
+                                 <label for="login-password" class="form-label">Password</label>
+                                 <input type="password" class="form-control" id="login-password" required>
+                             </div>
+                             <button type="submit" id="login-button" class="btn btn-primary">Log In</button>
+                             <div id="login-error" class="text-danger mt-2" style="display: none;"></div>
+                         </form>
+                     </div>
+                     <div class="tab-pane fade" id="signup" role="tabpanel" aria-labelledby="signup-tab">
+                         <form id="signup-form">
+                              <div class="mb-3">
+                                 <label for="signup-email" class="form-label">Email address</label>
+                                 <input type="email" class="form-control" id="signup-email" required>
+                             </div>
+                             <div class="mb-3">
+                                 <label for="signup-password" class="form-label">Password</label>
+                                 <input type="password" class="form-control" id="signup-password" required>
+                             </div>
+                              <button type="submit" id="signup-button" class="btn btn-success">Sign Up</button>
+                              <div id="signup-error" class="text-danger mt-2" style="display: none;"></div>
+                         </form>
+                     </div>
                  </div>
-                 <div class="col-md-6">
-                     <label for="filter-end-date" class="form-label">To Date</label>
-                     <input type="date" class="form-control" id="filter-end-date">
-                 </div>
-            </div>
-             <div class="row mb-3">
-                 <div class="col-md-6">
-                     <label for="sort-by" class="form-label">Sort By</label>
-                     <select class="form-select" id="sort-by">
-                         <option value="created_at">Date Created (Default)</option>
-                         <option value="date">Trip Date</option>
-                         <option value="distance">Distance</option>
-                     </select>
-                 </div>
-                 <div class="col-md-6">
-                     <label for="sort-order" class="form-label">Order</label>
-                     <select class="form-select" id="sort-order">
-                         <option value="desc">Newest / Largest First</option>
-                         <option value="asc">Oldest / Smallest First</option>
-                     </select>
-                 </div>
+                 <div id="auth-info" class="alert alert-info mt-3" style="display: none;"></div>
              </div>
-             <ul id="trip-history-list" class="list-group">
-                <li class="list-group-item text-muted">Loading trip history...</li>
-            </ul>
-             <div id="fetch-history-error" class="text-danger mt-2" style="display: none;"></div>
+
+             <div id="logged-in-view" style="display: none;">
+                 <p>Welcome, <strong id="user-email"></strong>!</p>
+                 <button id="logout-button" class="btn btn-danger btn-sm">Log Out</button>
+             </div>
+         </div>
+         <div id="app-content" style="display: none;">
+             <div class="mb-3">
+                <h2>Add Client Address</h2>
+                <div class="input-group">
+                    <input type="text" id="address-input" class="form-control" placeholder="Enter client address">
+                    <button id="add-address-button" class="btn btn-primary">Add Address</button>
+                </div>
+                <div id="add-address-error" class="text-danger mt-2" style="display: none;"></div>
+            </div>
+
+            <div>
+                <h2>My Client Addresses</h2>
+                <ul id="address-list" class="list-group">
+                    </ul>
+                 <div id="fetch-addresses-error" class="text-danger mt-2" style="display: none;"></div>
+            </div>
+
+            <hr class="my-4">
+            <div>
+                <h2>Plan Trip</h2>
+                <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
+                <ul id="trip-sequence-list" class="list-group mb-3">
+                    <li class="list-group-item text-muted">Select addresses above to build your trip...</li>
+                </ul>
+
+                <button id="clear-trip-sequence-button" class="btn btn-secondary btn-sm mb-3" style="display: none;">Clear Trip Sequence</button>
+
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label for="trip-date-input" class="form-label">Trip Date</label>
+                        <input type="date" class="form-control" id="trip-date-input">
+                    </div>
+                    <div class="col-md-6">
+                         <label for="trip-time-input" class="form-label">Trip Time</label>
+                        <input type="time" class="form-control" id="trip-time-input">
+                    </div>
+                </div>
+                <button id="calculate-mileage-button" class="btn btn-success">Calculate Mileage</button>
+                <div id="calculate-mileage-error" class="text-danger mt-2" style="display: none;"></div>
+
+
+                <div id="mileage-results" class="mt-3" style="display: none;">
+                    <h3>Mileage Results</h3>
+                    <p id="total-distance">Total Distance: --</p>
+                    <p id="potential-reimbursement">Potential Reimbursement: --</p>
+                    <h4>Mileage Between Stops:</h4>
+                    <ul id="trip-legs-list" class="list-group">
+                        </ul>
+                     <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button>
+                     <div id="save-trip-error" class="text-danger mt-2" style="display: none;"></div>
+                </div>
+            </div>
+
+            <hr class="my-4">
+
+            <div class="mb-3">
+                <h2>Trip History</h2>
+
+                <div class="row mb-3">
+                     <div class="col-md-6">
+                         <label for="filter-start-date" class="form-label">From Date</label>
+                         <input type="date" class="form-control" id="filter-start-date">
+                     </div>
+                     <div class="col-md-6">
+                         <label for="filter-end-date" class="form-label">To Date</label>
+                         <input type="date" class="form-control" id="filter-end-date">
+                     </div>
+                </div>
+                 <div class="row mb-3">
+                     <div class="col-md-6">
+                         <label for="sort-by" class="form-label">Sort By</label>
+                         <select class="form-select" id="sort-by">
+                             <option value="created_at">Date Created (Default)</option>
+                             <option value="date">Trip Date</option>
+                             <option value="distance">Distance</option>
+                         </select>
+                     </div>
+                     <div class="col-md-6">
+                         <label for="sort-order" class="form-label">Order</label>
+                         <select class="form-select" id="sort-order">
+                             <option value="desc">Newest / Largest First</option>
+                             <option value="asc">Oldest / Smallest First</option>
+                         </select>
+                     </div>
+                 </div>
+
+                <ul id="trip-history-list" class="list-group">
+                    <li class="list-group-item text-muted">Loading trip history...</li>
+                </ul>
+                 <div id="fetch-history-error" class="text-danger mt-2" style="display: none;"></div>
+            </div>
+             </div>
         </div>
-        </div>
+
 
     <div class="modal fade" id="tripDetailsModal" tabindex="-1" aria-labelledby="tripDetailsModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg"> <div class="modal-content">
@@ -165,6 +218,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
 </body>
 
