--- a/index.html
+++ b/index.html
@@ -214,20 +214,22 @@
             </div>
         </div>
     </div>
+
 <!-- Toast Container -->
-<div aria-live="polite" aria-atomic="true" class="position-fixed top-0 end-0 p-3" style="z-index: 1050">
-    <div id="toastContainer" class="toast-container">
-        <!-- Toasts will be dynamically inserted here -->
-    </div>
+<div aria-live="polite" aria-atomic="true" class="position-fixed" 
+     style="z-index: 9999; top: 20px; right: 20px;">
+    <div id="toastContainer" class="toast-container"></div>
 </div>
 
 <!-- Toast Template -->
- <template id="toastTemplate">
-    <div class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="d-flex">
-            <div class="toast-body"></div>
-            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+<template id="toastTemplate">
+    <div class="toast hide" role="alert" aria-live="assertive" aria-atomic="true"
+         style="min-width: 250px;">
+        <div class="toast-header">
+            <strong class="me-auto toast-title">Notification</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
         </div>
+        <div class="toast-body"></div>
     </div>
 </template>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
