--- a/index.html
+++ b/index.html
@@ -214,24 +214,21 @@
             </div>
         </div>
     </div>
-
-<!-- Toast Container -->
-<div aria-live="polite" aria-atomic="true" class="position-fixed bottom-0 end-0 p-3" style="z-index: 9999">
+<!-- Move this RIGHT BEFORE the </body> closing tag -->
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 9999">
     <div id="toastContainer" class="toast-container"></div>
 </div>
 
-<!-- Toast Template -->
 <template id="toastTemplate">
-    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
-        <div class="toast-header bg-primary text-white">
-            <strong class="me-auto toast-title">
-                <i class="bi bi-info-circle me-2"></i>Notification
-            </strong>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast"></button>
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto toast-title"></strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
         </div>
         <div class="toast-body"></div>
     </div>
 </template>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
