fix for bootstrap toast alerts v4

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="container mt-4">
         <h1 class="mb-3">Mileage Tracker</h1>
-
+<button onclick="showToast('Test toast!', 'success')" class="btn btn-warning">
+    Test Toasts
+</button>
          <div id="auth-section" class="mb-4 card p-3">
              <div id="logged-out-view">
                  <h3>Sign Up or Log In</h3>
