--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
     <div class="container mt-4">
         <h1 class="mb-3">Mileage Tracker</h1>
-<button onclick="showToast('Test toast!', 'success')" class="btn btn-warning">
-    Test Toasts
+<button onclick="showToast('This is a visible test toast!', 'success')" 
+        class="btn btn-warning fixed-bottom m-3">
+    Test Toast Visibility
 </button>
          <div id="auth-section" class="mb-4 card p-3">
              <div id="logged-out-view">
@@ -216,11 +217,6 @@
             </div>
         </div>
     </div>
-<!-- Move this RIGHT BEFORE the </body> closing tag -->
-<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 9999">
-    <div id="toastContainer" class="toast-container"></div>
-</div>
-
 <template id="toastTemplate">
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
@@ -235,6 +231,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
+
+    <!-- Move this as the LAST ELEMENT before </body> -->
+<div class="position-fixed" style="z-index: 9999; bottom: 0; right: 0; pointer-events: none;">
+    <div id="toastContainer" class="toast-container p-3"></div>
+</div>
 </body>
 
 </html>
