--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
          <div id="auth-section" class="mb-4 card p-3">
              <div id="logged-out-view">
-                 <h3>Sign Up or Log In</h3>
+                 <h3>Log In</h3>
                  <ul class="nav nav-tabs mb-3" id="authTabs" role="tablist">
                      <li class="nav-item" role="presentation">
                          <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="login" aria-selected="true">Log In</button>
                      </li>
-                     <li class="nav-item" role="presentation">
+                     <!-- <li class="nav-item" role="presentation">
                          <button class="nav-link" id="signup-tab" data-bs-toggle="tab" data-bs-target="#signup" type="button" role="tab" aria-controls="signup" aria-selected="false">Sign Up</button>
-                     </li>
+                     </li> -->
                  </ul>
                  <div class="tab-content" id="authTabsContent">
                      <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
@@ -40,7 +40,7 @@
                              <div id="login-error" class="text-danger mt-2" style="display: none;"></div>
                          </form>
                      </div>
-                     <div class="tab-pane fade" id="signup" role="tabpanel" aria-labelledby="signup-tab">
+                     <!-- <div class="tab-pane fade" id="signup" role="tabpanel" aria-labelledby="signup-tab">
                          <form id="signup-form">
                               <div class="mb-3">
                                  <label for="signup-email" class="form-label">Email address</label>
@@ -53,7 +53,7 @@
                               <button type="submit" id="signup-button" class="btn btn-success">Sign Up</button>
                               <div id="signup-error" class="text-danger mt-2" style="display: none;"></div>
                          </form>
-                     </div>
+                     </div> -->
                  </div>
                  <div id="auth-info" class="alert alert-info mt-3" style="display: none;"></div>
              </div>
