--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <!-- <script src="script.js"></script> -->
-     <script type="module" src="./main.js"></script>
+<script type="module">
+  import './js/main.js';
+</script>
 </body>
 
 </html>
