--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
                 </div>
                 <div class="modal-body">
                     <input type="text" id="edit-address-input" class="form-control">
-                    <div id="edit-address-error" class="text-danger mt-2" style="display: none;"></div>
+<input type="hidden" id="current-editing-address-id">
+<div id="edit-address-error" class="text-danger mt-2" style="display: none;"></div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
