--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="auth-section" class="mb-4 card p-3">
             <div id="logged-out-view">
                 <h3>Log In</h3>
-                <ul class="nav nav-tabs mb-3" id="authTabs" role="tablist">
+                <ul class="nav nav-pills nav-fill mb-3" id="authTabs">
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login"
                             type="button" role="tab" aria-controls="login" aria-selected="true">Log In</button>
