Reverted fix attempt v9

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                     </div>
                 </div>
             </div>
-            <div class="mb-4">
-                <button id="exportPdfBtn" class="btn btn-outline-secondary me-2">Export Dashboard PDF</button>
-                <button id="exportCsvBtn" class="btn btn-outline-secondary">Export Dashboard CSV</button>
+            <div class="d-flex justify-content-end mb-3">
+                <button id="exportTripsPdfBtn" class="btn btn-outline-secondary me-2">Export Trips PDF</button>
+                <button id="exportTripsCsvBtn" class="btn btn-outline-secondary">Export Trips CSV</button>
             </div>
             <div class="mb-3">
                 <h2>Add Client Address</h2>
