--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <!-- error container -->
 <div id="global-error" class="alert alert-danger m-3" style="display: none; position: sticky; top: 0; z-index: 9999;">
+    <button onclick="throw new Error('Test error')" class="btn btn-warning">
+  Simulate Crash
+</button>
     <!-- main container -->
     <div class="container mt-4">
         <h1 class="mb-3">Mileage Tracker</h1>
