--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- error container -->
     <div id="global-error" class="alert alert-danger m-3" style="display: none;"></div>
-    <button onclick="throw new Error('Test error')" class="btn btn-warning">
+<button id="test-error-btn" class="btn btn-warning">
   Simulate Crash
 </button>
     <!-- main container -->
