--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 <body>
     <!-- error container -->
     <div id="global-error" class="alert alert-danger m-3" style="display: none;"></div>
-<button id="test-error-btn" class="btn btn-warning">
-  Simulate Crash
-</button>
+
+    <!-- test crash button -->
+    <!-- <button id="test-error-btn" class="btn btn-warning">
+        Simulate Crash
+    </button> -->
+
     <!-- main container -->
     <div class="container mt-4">
         <h1 class="mb-3">Mileage Tracker</h1>
